--- a/main.html
+++ b/main.html
@@ -46,7 +46,7 @@
     </style>
 </head>
 <body>
-<!-- 	<h1>Book Library</h1> -->
+	<h1>Book Library</h1>
     <div class="book-library">
 		
         <div class="book">
